fix client warning